; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_enet.c_bna_enet_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_enet.c_bna_enet_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bna_enet = type { i32 }

@BNA_ENET_F_IOCETH_READY = common dso_local global i32 0, align 4
@BNA_ENET_F_ENABLED = common dso_local global i32 0, align 4
@ENET_E_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bna_enet*)* @bna_enet_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bna_enet_start(%struct.bna_enet* %0) #0 {
  %2 = alloca %struct.bna_enet*, align 8
  store %struct.bna_enet* %0, %struct.bna_enet** %2, align 8
  %3 = load i32, i32* @BNA_ENET_F_IOCETH_READY, align 4
  %4 = load %struct.bna_enet*, %struct.bna_enet** %2, align 8
  %5 = getelementptr inbounds %struct.bna_enet, %struct.bna_enet* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = or i32 %6, %3
  store i32 %7, i32* %5, align 4
  %8 = load %struct.bna_enet*, %struct.bna_enet** %2, align 8
  %9 = getelementptr inbounds %struct.bna_enet, %struct.bna_enet* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @BNA_ENET_F_ENABLED, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load %struct.bna_enet*, %struct.bna_enet** %2, align 8
  %16 = load i32, i32* @ENET_E_START, align 4
  %17 = call i32 @bfa_fsm_send_event(%struct.bna_enet* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @bfa_fsm_send_event(%struct.bna_enet*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
